# AtomicLanguageModel

./: .gitignore  GPT.ipynb  atomicLanguageModel.py  attention.ipynb  inference.py  languageModel.py  main.py  pyproject.toml  test.ipynb  text_processor.ipynb  trainTokenizer.py  trainer.ipynb
dataset/: instructions.json
marathi_tokenizer/: merges.txt  special_tokens_map.json  tokenizer_config.json  vocab.json
notebooks/: GPT.ipynb  attention.ipynb  trainer.ipynb
utils/: decoder.py  decoding.py  makePlots.py  modelTrainer.py  textProcessor.py
