[project]
name = "atomic-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blobfile>=3.0.0",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "nbimporter>=0.3.4",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
